# perfect-group-allocation

./: .containerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  caddy.json  clippy.toml  deny.toml  docker-compose.yml  example.com.cert.der  example.com.cert.pem  example.com.crt  example.com.key  example.com.key.der  example.com.key.pem  kubernetes.yaml  kustomization.yaml  list.dot  main.dot  main.hbs.dot  opentelemetry-collector-config.yaml  pga.toml  pipelines.yaml  run-integration-tests-helm.sh  run-integration-tests.sh  runner.sh  rustfmt.toml
.cargo/: config.toml
.forgejo/workflows/: rust.yaml
.forgejo/workflows/workflows/: rust.yaml
.github/: Dockerfile  run.sh
.github/workflows/: build-image.yaml  rust.yaml  rust.yml
deployment/: Dockerfile  Tokio.json  docker-compose.yml  pga.json  pipelines.yaml  test
deployment/k8s/: 1_postgres.yaml
deployment/kustomize/base/: 0_namespace.yaml  0_secret.yaml  1_postgres.yaml  client-secret  keycloak.yaml  kustomization.yaml  perfect-group-allocation.dev.yaml  perfect-group-allocation.yaml  postgres.yaml  test.yaml  webdriver.yaml
deployment/kustomize/base/application/: Dockerfile
deployment/kustomize/base/firefox/: Dockerfile
deployment/kustomize/base/keycloak/: Dockerfile
deployment/kustomize/base/perfect-group-allocation/: Dockerfile
deployment/kustomize/base/test/: Dockerfile  policies.json
deployment/kustomize/base/webdriver/: Dockerfile
deployment/kustomize/dev/: kustomization.yaml
deployment/kustomize/keycloak/: keycloak-postgres.yaml  keycloak.yaml  kustomization.yaml  postgres.yaml
deployment/kustomize/keycloak/keycloak/: Dockerfile
deployment/perfect-group-allocation/: Chart.yaml  values.yaml
deployment/perfect-group-allocation/charts/perfect-group-allocation-keycloak/: Chart.yaml  values.yaml
deployment/perfect-group-allocation/charts/perfect-group-allocation-keycloak/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  (+4 more)
deployment/perfect-group-allocation/charts/perfect-group-allocation-postgres/: Chart.yaml  values.yaml
deployment/perfect-group-allocation/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  keycloak-postgres.yaml  keycloak.yaml  perfect-group-allocation.yaml  postgres.yaml  rootca.yaml  service.yaml  serviceaccount.yaml  test.yaml
deployment/perfect-group-allocation/templates/tests/: test-connection.yaml
deployment/play/: keycloak.yaml  kustomization.yaml  postgres.yaml  server.keystore
determinism-hack/: Cargo.toml
determinism-hack/src/: lib.rs
frontend/: README.md  bundle.css  bundle.css.map  form.css  form.html  index.css  modern-normalize.css  nav.css  nav.html  normalize.css  package.json
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
perfect-group-allocation-backend/: Cargo.toml
perfect-group-allocation-backend/benches/: my_benchmark.rs
perfect-group-allocation-backend/src/: config.rs  csrf_protection.rs  either.rs  error.rs  h3.rs  lib.rs  openid.rs  quiche.rs  routes.rs  session.rs  solver.rs
perfect-group-allocation-backend/src/components/: main.rs
perfect-group-allocation-backend/src/examples/: workshops.rs
perfect-group-allocation-backend/src/routes/: bundlecss.rs  download.rs  favicon.rs  index.rs  indexcss.rs  openid_login.rs  openid_redirect.rs  projects.rs
perfect-group-allocation-backend/src/routes/projects/: create.rs  list.rs
perfect-group-allocation-backend/templates/: create_project.html.hbs  error.html.hbs  list_projects.html.hbs  main.html.hbs  nav.html.hbs
perfect-group-allocation-config/: Cargo.toml
perfect-group-allocation-config/src/: lib.rs
perfect-group-allocation-css/: Cargo.toml  build.rs
perfect-group-allocation-css/src/: build.rs  lib.rs
perfect-group-allocation-database/: Cargo.toml  README.md  diesel.toml
perfect-group-allocation-database/migrations/2024-01-03-232134_initial/: down.sql  up.sql
perfect-group-allocation-database/src/: error.rs  lib.rs  models.rs  schema.rs
perfect-group-allocation-e2e/: Cargo.toml
perfect-group-allocation-e2e/benches/http_e2e/: client.rs  main.rs  main.rs.txt
perfect-group-allocation-e2e/benches/service_e2e/: main.rs  main.rs.txt
perfect-group-allocation-e2e/src/: http_e2e.rs  http_e2e.rs.txt  lib.rs  main.rs  service_e2e.rs  service_e2e.rs.txt
perfect-group-allocation-e2e/tests/: integration.rs  webdriver.rs
perfect-group-allocation-openidconnect/: Cargo.toml
perfect-group-allocation-openidconnect/src/: error.rs  lib.rs
perfect-group-allocation-optimizer/: Cargo.toml
perfect-group-allocation-optimizer/src/: main.rs
perfect-group-allocation-telemetry/: Cargo.toml
perfect-group-allocation-telemetry/src/: lib.rs  router.rs  tokio_metrics.rs  trace_layer.rs
rdp-security/: rdp-security.crt
security-testing/: README.md  csrf.html
src/: api.rs  examples.rs  main.rs
src/examples/: workshops.rs
templates/: create-project.hbs  create-project.html.hbs  create_project.html.hbs  error.hbs  error.html.hbs  list,main,nav.dot  list.html.hbs  list_projects.html.hbs  main.hbs  main.html.dot  main.html.hbs  main_pre.hbs  main_pre.html.hbs  nav.hbs  nav.html.dot  nav.html.hbs  openid_redirect.hbs  openid_redirect.html.hbs  project.hbs
webdriver-bidi/: Cargo.toml  LICENSE_W3.md
webdriver-bidi/examples/: basic.rs
webdriver-bidi/src/: browser.rs  browsing_context.rs  error.rs  generated.rs  input.rs  lib.rs  log.rs  main.rs  protocol.rs  result.rs  script.rs  session.rs  webdriver.rs  webdriver_handler.rs  webdriver_session.rs
webdriver-bidi/src/browser/: close.rs
webdriver-bidi/src/browsing_context/: activate.rs  capture_screenshot.rs  close.rs  create.rs  event.rs  get_tree.rs  handle_user_prompt.rs  locate_nodes.rs  navigate.rs  print.rs  reload.rs  set_viewport.rs  traverse_history.rs
webdriver-bidi/src/input/: perform_actions.rs  release_actions.rs
webdriver-bidi/src/script/: add_preload_script.rs  call_function.rs  disown.rs  evaluate.rs  get_realms.rs  remove_preload_script.rs
webdriver-bidi/src/session/: end.rs  new.rs  status.rs  subscribe.rs  unsubscribe.rs
(+9 files in other folders)
