[workspace]
resolver = "2"
members = [
    "perfect-group-allocation-backend", "perfect-group-allocation-database", "perfect-group-allocation-e2e", "webdriver-bidi", "perfect-group-allocation-telemetry"
, "determinism-hack", "perfect-group-allocation-openidconnect", "perfect-group-allocation-css", "perfect-group-allocation-optimizer"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "AGPL-3.0-or-later"
repository = "https://github.com/projektwahl/perfect-group-allocation"
description = "Allocate people to groups according to their preferences while honoring specified restrictions."
keywords = ["web", "management", "service"]
categories = ["web-programming"]
readme = "README.md"

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[patch.crates-io]
h3 = { git = "https://github.com/hyperium/h3.git" } # http version 1
