cargo-features = ["edition2024"]

[package]
name = "perfect-group-allocation-backend"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
profiling = []

[dependencies]
futures-util = "0.3"
itertools = { default-features = false, version = "0.12", features = [ "use_alloc", "use_std" ] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.25"
hyper = { version = "1", features = ["full"] }
http-body = "1"
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
thiserror = "1"
once_cell = "1"
chrono = "0.4"
http = "1"
zero-cost-templating = { git = "https://github.com/mohe2015/zero-cost-templating.git", branch = "work" }
bytes = "1"
pin-project = "1"
hyper-util = "0.1"
http-body-util = "0.1.0"
perfect-group-allocation-database = { path = "../perfect-group-allocation-database" }
diesel = "2"
diesel-async = { version = "0.4", features = ["postgres", "deadpool"] }
cookie = "0.18"

sha2 = { version = "0.10", features = ["asm"] }

log = { version = "0.4", features = ["release_max_level_off"] }
tracing = { version = "0.1", features = ["release_max_level_off"] }
#perfect-group-allocation-telemetry = { path = "../perfect-group-allocation-telemetry", optional = true }
