cargo-features = ["edition2024"]

[package]
name = "perfect-group-allocation-backend"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[features]
profiling = []

[dependencies]
futures-util = { default-features = false, version = "0.3" }
itertools = { default-features = false, version = "0.12", features = [ "use_alloc", "use_std" ] }
tokio = { default-features = false, version = "1", features = ["full"] }
tokio-rustls = { default-features = false, version = "0.25" }
rustls-pemfile = { default-features = false, version = "2" }
hyper = { default-features = false, version = "1", features = ["full"] }
h3 = { default-features = false, git = "https://github.com/hyperium/h3.git", branch = "master" }
s2n-quic-h3 = { default-features = false, git = "https://github.com/aws/s2n-quic.git" }
s2n-quic = { default-features = false, git = "https://github.com/aws/s2n-quic.git" }
#h3-quinn = { default-features = false, git = "https://github.com/hyperium/h3.git", branch = "master" }
#quinn = { default-features = false, version = "0.10" } # depends on old version of tokio-rustls
http-body = { default-features = false, version = "1" }
tokio-util = { default-features = false, version = "0.7", features = ["io"] }
anyhow = { default-features = false, version = "1" }
serde_json = { default-features = false, version = "1" }
serde = { default-features = false, version = "1", features = ["derive"] }
rand = { default-features = false, version = "0.8" }
thiserror = { default-features = false, version = "1" }
once_cell = { default-features = false, version = "1" }
chrono = { default-features = false, version = "0.4" }
http = { default-features = false, version = "1" }
headers = { default-features = false, version = "0.4" }
mime = { default-features = false, version = "0.3" }
zero-cost-templating = { default-features = false, git = "https://github.com/mohe2015/zero-cost-templating.git", branch = "work" }
bytes = { default-features = false, version = "1" }
pin-project = { default-features = false, version = "1" }
hyper-util = { default-features = false, version = "0.1" }
http-body-util = { default-features = false, version = "0.1" }
serde_urlencoded = { default-features = false, version = "0.7" }
paste = { default-features = false, version = "1" }
diesel = { default-features = false, version = "2" }
diesel-async = { default-features = false, version = "0.4", features = ["postgres", "deadpool"] }
cookie = { default-features = false, version = "0.18" }
sha2 = { default-features = false, version = "0.10", features = ["asm"] }
log = { default-features = false, version = "0.4", features = ["release_max_level_off"] }
tracing = { default-features = false, version = "0.1", features = ["release_max_level_off"] }
perfect-group-allocation-telemetry = { default-features = false, path = "../perfect-group-allocation-telemetry" }
perfect-group-allocation-database = { default-features = false, path = "../perfect-group-allocation-database" }
perfect-group-allocation-openidconnect = { default-features = false, path = "../perfect-group-allocation-openidconnect" }
perfect-group-allocation-css = { default-features = false, path = "../perfect-group-allocation-css" }
