cargo-features = ["edition2024"]

[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "perfect-group-allocation-config"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10", features = ["env", "toml"] }
serde = { default-features = false, version = "1", features = ["derive"] }
thiserror = { default-features = false, version = "1" }

[lints]
workspace = true
