[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "perfect-group-allocation-config"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = { default-features = false, version = "6" }
thiserror = { default-features = false, version = "1" }
tokio = { default-features = false, version = "1", features = [
    "fs",
    "rt",
    "sync",
    "time",
] }

[lints]
workspace = true
