cargo-features = ["edition2024"]

[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "perfect-group-allocation-css"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightningcss = { default-features = false, version = "1.0.0-alpha.52", features = [
    "bundler",
    "grid",
] }

[lints]
workspace = true
