cargo-features = ["edition2024"]

[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "perfect-group-allocation-database"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { default-features = false, version = "0.7", features = [
    "postgres",
    "runtime-tokio",
] }
thiserror = { default-features = false, version = "1" }

[lints]
workspace = true
