[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "perfect-group-allocation-database"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { default-features = false, version = "2" }
diesel-async = { default-features = false, version = "0.4", features = [
    "deadpool",
    "postgres",
    "async-connection-wrapper"
] }
diesel_migrations = { default-features = false, version = "2" }
tokio = { default-features = false, version = "1", features = [
    "rt-multi-thread",
] }
thiserror = { default-features = false, version = "1" }

[lints]
workspace = true
