cargo-features = ["edition2024"]

[package]
name = "perfect-group-allocation-e2e"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
iai-callgrind = "0.9.0"
perfect-group-allocation-backend = { path = "../perfect-group-allocation-backend" }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
tower-service = "0.3"
axum-core = { git = "https://github.com/tokio-rs/axum.git", branch = "david/arc-router-2" }
libc = "0.2"
rand = "0.8"

[[bench]]
name = "http_e2e"
harness = false

[[bench]]
name = "service_e2e"
harness = false
