cargo-features = ["edition2024"]

[package]
name = "perfect-group-allocation-e2e"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
iai-callgrind = { default-features = false, version = "0.10", features = ["default"] }
perfect-group-allocation-backend = { default-features = false, path = "../perfect-group-allocation-backend" }
webdriver-bidi = { default-features = false, path = "../webdriver-bidi" }
hyper = { default-features = false, version = "1", features = ["full"] }
tokio = { default-features = false, version = "1", features = ["full"] }
http-body-util = { default-features = false, version = "0.1" }
hyper-util = { default-features = false, version = "0.1", features = ["full"] }
bytes = { default-features = false, version = "1" }
libc = { default-features = false, version = "0.2" }
rand = { default-features = false, version = "0.8" }
tracing = { default-features = false, version = "0.1" }
tracing-subscriber = { default-features = false, version = "0.3", features = ["env-filter"] }
perfect-group-allocation-config = { default-features = false, path = "../perfect-group-allocation-config" }

[[bench]]
name = "http_e2e"
harness = false

[[bench]]
name = "service_e2e"
harness = false
