[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "perfect-group-allocation-e2e"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
bytes = { default-features = false, version = "1" }
http-body-util = { default-features = false, version = "0.1" }
hyper = { default-features = false, version = "1" }
hyper-util = { default-features = false, version = "0.1" }
libc = { default-features = false, version = "0.2" }
perfect-group-allocation-backend = { default-features = false, path = "../perfect-group-allocation-backend" }
perfect-group-allocation-config = { default-features = false, path = "../perfect-group-allocation-config" }
rand = { default-features = false, version = "0.8" }
rustls-pemfile = { default-features = false, version = "2", features = ["std"] }
tokio = { default-features = false, version = "1" }
tokio-rustls = { default-features = false, version = "0.25", features = [
    "default",
] }
tracing = { default-features = false, version = "0.1" }


[dev-dependencies]
iai-callgrind = { default-features = false, version = "0.10", features = [
    "default",
] }
tempfile = { default-features = false, version = "3" }
tracing-subscriber = { default-features = false, version = "0.3", features = [
    "env-filter",
] }
webdriver-bidi = { default-features = false, path = "../webdriver-bidi" }


[[bench]]
harness = false
name = "http_e2e"

[[bench]]
harness = false
name = "service_e2e"
