cargo-features = ["edition2024"]

[package]
name = "perfect-group-allocation-openidconnect"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openidconnect = { default-features = false, version = "3" }
oauth2 = { default-features = false, version = "4" }
thiserror = { default-features = false, version = "1" }
serde = { default-features = false, version = "1", features = ["derive"] }
serde_json = { default-features = false, version = "1" }
tokio = { default-features = false, version = "1", features = ["full"] }
perfect-group-allocation-config = { default-features = false, path = "../perfect-group-allocation-config" }
tokio-rustls = { default-features = false, version = "0.25", features = ["default"] }
webpki-roots = { default-features = false, version = "0.26.0" }
hyper-util = { default-features = false, version = "0.1", features = ["tokio", "server-auto"] }
hyper = { default-features = false, version = "1", features = ["full"] }
http-body-util = { default-features = false, version = "0.1" }

[lints]
workspace = true
