[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "perfect-group-allocation-openidconnect"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = { default-features = false, version = "0.1" }
hyper = { default-features = false, version = "1", features = [
    "client",
    "http1",
] }
hyper-openssl = { default-features = false, version = "0.10" }
hyper-util = { default-features = false, version = "0.1", features = ["tokio"] }
oauth2 = { default-features = false, version = "4" }
openidconnect = { default-features = false, version = "3" }
openssl = { default-features = false, version = "0.10" }
perfect-group-allocation-config = { default-features = false, path = "../perfect-group-allocation-config" }
rustls-native-certs = { default-features = false, version = "0.7.0" }
serde = { default-features = false, version = "1", features = ["derive"] }
serde_json = { default-features = false, version = "1" }
thiserror = { default-features = false, version = "1" }
tokio = { default-features = false, version = "1" }
tokio-rustls = { default-features = false, version = "0.25", features = [
    "default",
] }
webpki-roots = { default-features = false, version = "0.26.0" }

[lints]
workspace = true
