cargo-features = ["edition2024"]

[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "perfect-group-allocation-optimizer"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
good_lp = { default-features = false, version = "1", features = [
    "coin_cbc",
] } # TOOD split out into separate crate
itertools = { default-features = false, version = "0.12", features = [
    "use_alloc",
    "use_std",
] }
tracing = { default-features = false, version = "0.1" }

[lints]
workspace = true
