cargo-features = ["edition2024"]

[package]
name = "perfect-group-allocation-telemetry"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["release_max_level_off"] }
tracing = { version = "0.1", features = ["release_max_level_off"] }
tracing-opentelemetry = { version = "0.22" }
tracing-subscriber = "0.3"
console-subscriber = "0.2"
opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["metrics", "http-proto", "reqwest-client", "logs"] }
opentelemetry-semantic-conventions = { version = "0.13" }
opentelemetry-appender-log = { version = "0.2" }
opentelemetry-appender-tracing = { version = "0.2" }
tokio-metrics = { version = "0.3" }

tower-layer = "0.3"
tower-service = "0.3"
http = "1"
axum = { git = "https://github.com/tokio-rs/axum.git", branch = "david/arc-router-2" }
pin-project = "1"
tokio = "1"

[lints]
workspace = true
