cargo-features = ["edition2024"]

[package]
name = "perfect-group-allocation-telemetry"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { default-features = false, version = "0.4", features = ["release_max_level_off"] }
tracing = { default-features = false, version = "0.1", features = ["release_max_level_off"] }
tracing-opentelemetry = { default-features = false, version = "0.22" }
tracing-subscriber = { default-features = false, version = "0.3" }
console-subscriber = { default-features = false, version = "0.2" }
opentelemetry = { default-features = false, version = "0.21", features = ["metrics"] }
opentelemetry_sdk = { default-features = false, version = "0.21", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { default-features = false, version = "0.14", features = ["metrics", "http-proto", "reqwest-client", "logs"] }
opentelemetry-semantic-conventions = { default-features = false, version = "0.13" }
opentelemetry-appender-log = { default-features = false, version = "0.2" }
opentelemetry-appender-tracing = { default-features = false, version = "0.2" }
tokio-metrics = { default-features = false, version = "0.3" }
http = { default-features = false, version = "1" }
pin-project = { default-features = false, version = "1" }
tokio = { default-features = false, version = "1" }

[lints]
workspace = true
