[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "perfect-group-allocation-telemetry"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { default-features = false, version = "0.1", features = [
    "release_max_level_off",
] }
tracing-opentelemetry = { default-features = false, version = "0.22", features = [
    "metrics",
] }
tracing-subscriber = { default-features = false, version = "0.3", features = [
    "env-filter",
    "fmt",
] }
#console-subscriber = { default-features = false, version = "0.2" }
opentelemetry = { default-features = false, version = "0.21", features = [
    "metrics",
    "trace",
] }
opentelemetry-otlp = { default-features = false, version = "0.14", features = [
    "http-proto",
    "metrics",
    "trace",
] }
opentelemetry-semantic-conventions = { default-features = false, version = "0.13" }
opentelemetry_sdk = { default-features = false, version = "0.21", features = [
    "metrics",
    "rt-tokio",
    "trace",
] }
tokio = { default-features = false, version = "1" }

[lints]
workspace = true
