cargo-features = ["edition2024"]

[package]
name = "webdriver-bidi"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.21"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
serde_path_to_error = "0.1"
paste = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[lints]
workspace = true
