cargo-features = ["edition2024"]

[package]
name = "webdriver-bidi"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { default-features = false, version = "0.21", features = ["connect"] }
tokio = { default-features = false, version = "1", features = ["full"] }
futures = { default-features = false, version = "0.3" }
serde = { default-features = false, version = "1", features = ["derive"] }
serde_json = { default-features = false, version = "1" }
tempfile = { default-features = false, version = "3" }
thiserror = { default-features = false, version = "1" }
serde_path_to_error = { default-features = false, version = "0.1" }
paste = { default-features = false, version = "1" }
tracing = { default-features = false, version = "0.1" }
tracing-subscriber = { default-features = false, version = "0.3" }

[lints]
workspace = true
