cargo-features = ["edition2024"]

[package]
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "webdriver-bidi"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { default-features = false, version = "0.3" }
paste = { default-features = false, version = "1" }
serde = { default-features = false, version = "1", features = ["derive"] }
serde_json = { default-features = false, version = "1", features = ["alloc"] }
serde_path_to_error = { default-features = false, version = "0.1" }
tempfile = { default-features = false, version = "3" }
thiserror = { default-features = false, version = "1" }
tokio = { default-features = false, version = "1" }
tokio-tungstenite = { default-features = false, version = "0.21", features = [
    "connect",
] }
tracing = { default-features = false, version = "0.1" }

[dev-dependencies]
tracing-subscriber = { default-features = false, version = "0.3", features = [
    "fmt",
] }

[lints]
workspace = true
